--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
     "version": 2,
+    "builds": [{
+        "src": "index.js",
+        "use": "@now/node"
+    }],
     "routes": [{ "src": "(.*)", "dest": "app.js" }],
     "rewrites":[{"source":"/(.*)", "destination":"/"}]
   }
