--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,15 @@
 {
     "version": 2,
-    "builds": [{
-        "src": "index.js",
+    "builds": [
+      {
+        "src": "app.js",
         "use": "@now/node"
-    }],
-    "routes": [{ "src": "(.*)", "dest": "app.js" }],
-    "rewrites":[{"source":"/(.*)", "destination":"/"}]
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "app.js"
+      }
+    ]
   }
