--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "conduit on node",
   "main": "app.js",
   "scripts": {
-  "build":"npm install"
+  "build":"node app.js"
   },
   "repository": {
     "type": "git",
