--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
     "version": 2,
-    
+    "builds": [
+      {
+        "src": "app.js",
+        "use": "@now/node"
+      }
+    ],
     "routes": [
       {
         "src": "/(.*)",
